# spinframework

./: .cproject  .gitignore  .project  AUTHORS  HACKING  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.include  NEWS  README  README.txt  RELEASE  TODO  aclocal.m4  autogen.sh  buildWrappers.sh  configure  configure.ac  doxyfile.in  doxygen_config  genwrapper.conf  man-spinserver.txt  one_step_build.sh  spin.pc.in  spinframework_0.3.10.orig.tar.gz.delta  spinframework_0.3.10.orig.tar.gz.id  spinframework_0.3.12.orig.tar.gz.delta  spinframework_0.3.12.orig.tar.gz.id  spinframework_0.3.13.orig.tar.gz.delta  spinframework_0.3.13.orig.tar.gz.id  spinframework_0.3.2.orig.tar.gz.delta  spinframework_0.3.2.orig.tar.gz.id  spinframework_0.3.9.orig.tar.gz.delta  spinframework_0.3.9.orig.tar.gz.id  spinserver.1  spinviewer.1
completion/: Makefile.am  Makefile.in  spinserver  spinviewer
doc/: spineditor_classes.dia
include/: AnimationNode.h  AttractorNode.h  CameraNode.h  CollisionShape.h  CompositeViewer.h  ConstraintsNode.h  Contour.h  DSPNode.h  DebugVisitor.h  DraggerTrackball.h  DraggerWith3Axes.h  EventDispatcher.h  EventHandler.h  Fog.h  GeometryNode.h  GridNode.h  GroupNode.h  ImageTexture.h  KinectCloud.h  LODNode.h  LightSource.h  Listener.h  MeasurementNode.h  MediaManager.h  Menu3D.h  ModelNode.h  ParticleSystem.h  ParticleSystemUtil.h  PointCloud.h  PointerNode.h  RayNode.h  ReferencedNode.h  (+141 more)
man/: Makefile.am  man-lodifier.txt  man-spinviewer.txt  spindocgenerator.1
src/Resources/images/: Makefile.am  Makefile.in  icon_3Dsphere.xpm  icon_D.xpm  icon_next.xpm  icon_prev.xpm  icon_reload.xpm  icon_tree.xpm  logo_spinViewer.icns  spin.icns  spinViewer.icns
src/Resources/images/.svn/: all-wcprops  entries
src/Resources/images/.svn/text-base/: icon_avatar.xpm.svn-base  icon_eraser.gif.svn-base  icon_refresh.gif.svn-base  spinViewer.icns.svn-base
src/Resources/shaders/: Makefile.am  depth_of_field_fp.glsl  dilate_1Dx_fp.glsl  dilate_1Dy_fp.glsl  dilate_vp.glsl  dof_computeBlur_fp.glsl  dof_gauss_1Dx_fp.glsl  dof_gauss_1Dy_fp.glsl  dof_vp.glsl  mask_fp.glsl  mask_vp.glsl  motionBlur_fp.glsl  motionBlur_vp.glsl  outline_fp.glsl  outline_vp.glsl  particle.vert  screenSpaceAO_composite_fp.glsl  screenSpaceAO_composite_vp.glsl  screenSpaceAmbientOcc_fp.glsl  screenSpaceAmbientOcc_vp.glsl
src/editor/: GUIFrame.cpp  GUIFrame.h  MainFrame.cpp  MainFrame.fbp  MainFrame.h  MainFrame_base.cpp  MainFrame_base.h  Makefile.am  Makefile.in  app.cpp  app.h  dialog_NewNode.cpp  dialog_NewNode.fbp  dialog_NewNode.h  dialog_NewNode_base.cpp  dialog_NewNode_base.h  hworld.cpp  introspection.cpp  introspection.h  main.cpp  main.h  main_window.cpp  main_window.h  spineditor.cpp  unused.h  wxSpinPropGrid.cpp  wxSpinPropGrid.h  wxSpinTreeCtrl.cpp  wxSpinTreeCtrl.h  wxSpinTreeVisitor.cpp  wxSpinTreeVisitor.h
src/genwrapper/: Configuration.cpp  Configuration.h  Dogenwrapper.sh  FileSystemUtils.cpp  FileSystemUtils.h  GNUmakefile  GNUmakefile.template  Makefile.am  Makefile.in  NodeMap.cpp  NodeMap.h  Notify.cpp  Notify.h  PathNameUtils.cpp  PathNameUtils.h  README.txt  RegistryBuilder.cpp  RegistryBuilder.h  TypeDesc.cpp  TypeDesc.h  TypeNameUtils.cpp  TypeNameUtils.h  TypeRegistry.cpp  TypeRegistry.h  WrapperGenerator.cpp  WrapperGenerator.h  XML_node.h  XML_parser.h  genwrapper.sln  genwrapper.vcproj  main.cpp  vs6project.template
src/genwrapper/html/: Configuration_8h-source.html  FileSystemUtils_8h-source.html  NodeMap_8h-source.html  Notify_8h-source.html  PathNameUtils_8h-source.html  RegistryBuilder_8h-source.html  TypeDesc_8h-source.html  TypeNameUtils_8h-source.html  TypeRegistry_8h-source.html  WrapperGenerator_8h-source.html  XML__node_8h-source.html  XML__parser_8h-source.html  files.html  index.html
src/genwrapper/latex/: doxygen.sty  refman.tex
src/lodifier/: Makefile.am  lodifier.cpp  megascene.cpp
src/osgPPU/: Makefile.am
src/osgWrappers/: .cproject  .project  Makefile  Makefile.am  Makefile.in
src/osgWrappers/generator/: Makefile.am
src/osgWrappers/introspection/: AnimationNode.cpp  AttractorNode.cpp  CollisionShape.cpp  ConstraintsNode.cpp  Contour.cpp  DSPNode.cpp  DraggerTrackball.cpp  DraggerWith3Axes.cpp  EventHandler.cpp  EventTypes.cpp  Fog.cpp  GeometryNode.cpp  GridNode.cpp  GroupNode.cpp  ImageTexture.cpp  KinectCloud.cpp  LODNode.cpp  LightSource.cpp  Listener.cpp  Makefile.am  Makefile.in  MeasurementNode.cpp  MediaManager.cpp  Menu3D.cpp  ModelNode.cpp  ParticleSystem.cpp  PointCloud.cpp  PointerNode.cpp  RayNode.cpp  ReferencedNode.cpp  ReferencedStateSet.cpp  ReporterNode.cpp  SceneManager.cpp  Shader.cpp  ShaderUtil.cpp  ShapeNode.cpp  SharedVideoNode.cpp  SharedVideoTexture.cpp  SoundConnection.cpp  SoundNode.cpp  (+76 more)
src/spin/: .cproject  .project  AnimationNode.cpp  AttractorNode.cpp  CameraNode.cpp  CollisionShape.cpp  CompositeViewer.cpp  ConstraintsNode.cpp  Contour.cpp  DSPNode.cpp  DraggerTrackball.cpp  DraggerWith3Axes.cpp  EventHandler.cpp  Fog.cpp  GeometryNode.cpp  GridNode.cpp  GroupNode.cpp  ImageTexture.cpp  KinectCloud.cpp  LODNode.cpp  LightSource.cpp  Listener.cpp  Makefile  Makefile.am  Makefile.in  MeasurementNode.cpp  MediaManager.cpp  Menu3D.cpp  ModelNode.cpp  ParticleSystem.cpp  PointCloud.cpp  PointerNode.cpp  RayNode.cpp  ReferencedNode.cpp  ReferencedState.cpp  ReferencedStateSet.cpp  ReporterNode.cpp  SceneManager.cpp  Shader.cpp  ShaderUtil.cpp  (+49 more)
src/spin/deprecated/: asCameraManager.h  asToggle.cpp  findNodeVisitor.cpp
src/spin/scripts/: hello.py  hotspot.py  orbit.py  spin.py
src/spin/wxsmith/: spinframe.wxs  wxSpinEditor.wxs  wxSpinSettings.wxs  wxVessEditor.wxs  wxVessRenderer.wxs  wxVessSettings.wxs
src/spineditor/: Makefile.am  WxWizFrame.fbp  spinWX.cbp  spinWX.cpp  spinWX.workspace  spineditorApp.cpp  spineditorMain.cpp  vessWX.cbp  wxSpinEditor.cpp  wxSpinMain.cpp  wxSpinPropGrid.cpp  wxSpinRenderer.cpp  wxSpinTreeCtrl.cpp
src/spineditor/wxsmith/: Makefile.am  wxSpinConfig.wxs  wxSpinMain.wxs  wxSpinRenderer.wxs
tests/: Makefile.am  Makefile.in  check_it_works.cpp  run_gdb.sh  run_stats.sh
(+259 files in other folders)
